--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,40 +1,35 @@
 {
-  "name": "projet-maison-du-web",
+  "name": "frontend",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.27.2",
-    "expo": "~45.0.0",
-    "expo-app-loading": "~2.0.0",
-    "expo-checkbox": "~2.1.0",
-    "expo-font": "~10.1.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
+    "expo": "~46.0.8",
+    "expo-checkbox": "~2.2.0",
+    "expo-font": "~10.2.0",
+    "expo-splash-screen": "~0.16.1",
+    "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
-    "react": "17.0.2",
+    "react": "18.0.0",
     "react-devtools": "^4.25.0",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react-native": "0.69.4",
     "react-native-dotenv": "^3.3.1",
-    "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.16.0",
+    "react-native-toast-message": "^2.1.5",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "rimraf": "^3.0.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
